--- a/seahub/templates/snippets/file_content_html.html
+++ b/seahub/templates/snippets/file_content_html.html
@@ -14,7 +14,7 @@ For details please refer to 'snippets/file_content_js.html'.
                 {% endif %}
 
                 {% if filetype == 'Sf' %}
-                <div id="sf" class="article">{{ file_content|safe }}</div>
+                <div id="sf" class="article"></div>
                 {% endif %}
 
                 {% if filetype == 'Markdown' %}
